tests/functional/cases/fail/test_long_path.coil
abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwx.abcdefghijklmnopqrstuvwx.abcdefghijklmnopqrstuvwx.abcdefghijklmnopqrs:123
